test/Fail/TacticNotAllowed.err
TacticNotAllowed.agda:11.21-38: error: [TacticAttributeNotAllowed]
The @tactic attribute is not allowed here
when checking the parameters of module M
